src/_shared/types/Resource/style.css
.resourceDetail {
    container-type: inline-size;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    background-size: 100% 100%;
}

.resourceDetail .resourceOptions {
    position: absolute;
    bottom: 0px;
    left: 0px;
    width: 100%;
    padding: 4px 1px 4px 14px;
    color: var(--secondary-fg-color);
    background: var(--primary-bg-color);
    box-sizing: border-box;
    opacity: 0.7;
    display: none;
}

.resourcePreviewDialog .resourceDetail .resourceOptions {
    display: block;
}

.resourceDetail:hover .resourceOptions {
    opacity: 0.85;
}

.resourceDetail .resourceOptions .licenseInformation {
    float: left;
    line-height: 30px;
    width: calc(100% - 70px);
}

.resourceDetail .resourceOptions .licenseInformation a {
    border: 0;
    outline: 0;
    color: var(--primary-fg-color);
}

.resourceDetail .resourceOptions .licenseInformation a .cc-by-sa-bg-image {
    display: inline-block;
    width: 50px;
    height: 30px;
    vertical-align: bottom;
}

.resourceDetail .resourceOptions .resourceButtons {
    float: right;
    line-height: 30px;
}

.resourceDetail .resourceOptions .resourceButtons .button {
    padding: 2px 4px;
    border-color: transparent;
    color: var(--secondary-fg-color);
}

.resourceDetail .resourceOptions .resourceButtons .button:hover {
    background: var(--primary-fg-color);
    color: var(--primary-bg-color);
}

/* Resource Thumb */

.resourceThumb {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top center;
    background-color: var(--primary-bg-color);
    outline: 1px solid var(--primary-bg-color);
    cursor: pointer;
    border-radius: 3px;
}


.resourceThumb.ft-drag-clone {
    outline: 1px solid #FF9919;
}

.resourceThumb.ui-draggable {
    cursor: move;
}

.resourceThumb .resourceOverlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .5) 100%);
}

.resourceThumb .resourceOverlay .resourceIcon {
    position: absolute;
    right: 10px;
    bottom: 10px;
    width: 26px;
    height: 16px;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    z-index: 2;
}

.resourceThumb .resourceOverlay .resourceIcon [class^="icon-"]::before, .resourceThumb .resourceOverlay .resourceIcon [class*=" icon-"]::before {
    font-size: 20px;
    color: var(--thumb-icon-color);
    text-shadow: var(--thumb-icon-shadow);
}


body > .resourceThumb:not(.resourceAnimationDiv) .resourceTitle {
    display: block;
}

.resourceThumb .resourceTitle {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    max-height: 50px;
    background-color: var(--thumb-title-bg);
    font-size: 13px;
    padding: 6px 5px 3px 5px;
    overflow: hidden;
    color: var(--thumb-title-color);
    text-shadow: var(--thumb-title-shadow);
    word-wrap: break-word;
    hyphens: auto;
    box-sizing: border-box;
}

.resourceThumb .resourcePreviewButton {
    position: absolute;
    bottom: 4px;
    left: 4px;
    z-index: 4;
    background-color: var(--semi-transparent-bg-color);
    border: 2px solid var(--primary-fg-color) ;
    border-radius: 50%;
    font-size: 0;
    height: 28px;
    width: 28px;
    display: none;
}

.resourceThumb .resourcePreviewButton [class^="icon-"]::before, .resourceThumb .resourcePreviewButton [class*=" icon-"]::before {
    font-size: 18px;
    width: 100%;
    margin: 0;
    line-height: 26px;
    color: var(--primary-fg-color);
}

.resourceThumb .resourcePreviewButton:hover {
    background-color: var(--primary-bg-color);
}

.resourceThumb:hover .resourcePreviewButton {
    display: block;
}

.resourceThumb.ft-drag-clone .resourcePreviewButton, .resourceThumb.dragPlaceholder .resourcePreviewButton, .resourceThumb.resourceAnimationDiv .resourcePreviewButton {
    display: none;
}

.resourceThumb .resourceEditButton {
    position: absolute;
    bottom: 4px;
    right: 4px;
    z-index: 4;
    background-color: var(--semi-transparent-bg-color);
    border: 2px solid var(--primary-fg-color);
    border-radius: 50%;
    font-size: 0;
    height: 28px;
    width: 28px;
    display: none;
    cursor: pointer;
}

.resourceThumb .resourceEditButton [class^="icon-"]::before, .resourceThumb .resourceEditButton [class*=" icon-"]::before {
    font-size: 18px;
    width: 100%;
    margin: 0;
    line-height: 26px;
    color: var(--primary-fg-color);
}

.resourceThumb .resourceEditButton:hover {
    background-color: var(--primary-bg-color);
}

.resourceThumb:hover .resourceEditButton {
    display: block;
}

.resourceThumb.ft-drag-clone .resourceEditButton, .resourceThumb.dragPlaceholder .resourceEditButton, .resourceThumb.resourceAnimationDiv .resourceEditButton {
    display: none;
}

/* Edit Overlay Properties */

.editPropertiesContainer .layoutRow > * {
    margin-bottom: 10px;
}

.editPropertiesContainer .controlsWrapper {
    width: 100%;
    height: 100%;
}

.editPropertiesContainer .previewThumbContainer {
    float: right;
    height: 100px;
    width: 140px;
}

.editPropertiesContainer .previewThumbContainer .resourceThumb {
    position: relative;
    width: 100%;
    height: 100%;
}

.editPropertiesContainer .tagManagementUI {
    padding-top: 10px;
    clear: both;
}

.editPropertiesContainer .propertiesTypeIcon {
    float: left;
    background-position: left 3px;
    background-repeat: no-repeat;
    background-size: 100% auto;
    height: 28px;
    margin-bottom: 2px;
    width: 32px;
}

.editPropertiesContainer .propertiesTypeIcon [class^="icon-"]::before, .editPropertiesContainer .propertiesTypeIcon [class*=" icon-"]::before {
    font-size: 25px;
    margin-left: 0px;
    color: var(--primary-bg-color);
}
/* ... */

